- fixed body being too high

--- a/style.css
+++ b/style.css
@@ -654,7 +654,7 @@ p {
 /* COMETS */
 body {
     margin: 0;
-    height: 200vh;
+    height: 100%;
 }
 
 .comets {
